Se agregó video introductorio

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main class="fondo-transparente">
         <section>
             <h2>¡Bienvenidos a la Cocina India!</h2>
-            <img class="bandera-cocina" src="cocina-india-bandera.jpg" alt="bandera india">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/tnoR1NTiFSA?si=7nSsz5UTcYcOdJr4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <h3>Platillos Destacados</h3>
 
             <article>
