--- a/plato_bhelpuri.html
+++ b/plato_bhelpuri.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cocina India</title>
+        <title>Cocina India | Platillo Bhelpuri</title>
         <link rel="icon" href="icono.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,19 +13,20 @@
     </head>
 <body>
     <header>
-        <h1>Cocina De La India</h1>
+        <h1><a href="index.html">Cocina De La India</a></h1>
         <nav>
             <ul class="menu-nav">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="ingrediente.html">Ingredientes Importantes</a></li>
                 <li><a href="plato_bhelpuri.html">Platillo Bhelpuri</a></li>
                 <li><a href="plato_masala_dosa.html">Platillo Masala Dosa</a></li>
-                <li><a href="plato_samosa.html">Platillo Samosa</a></li>
+                <li><a href="galeria.html">Platillo Samosa</a></li>
+                <li><a href="galeria.html">Galería</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
+    <main class="fondo-transparente">
         <h2>Bhelpuri</h2>
         <img src="bhelpuri.jpg" alt="Imagen de Bhelpuri">
         
